Fix cut-n-paste issue in CI pipeline

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -92,9 +92,9 @@ jobs:
       - name: Combine coverage
         run: poetry run coverage combine coverage
       - name: Coverage report
-        run: poetry run coverage report --skip-empty --show-missing --include=openapi_spec_tools/*
+        run: poetry run coverage report --skip-empty --show-missing --include=rich_objects/*
       - name: Coverage HTML
-        run: poetry run coverage html --show-contexts --title "Coverage for ${{ github.sha }}" --include=openapi_spec_tools/*
+        run: poetry run coverage html --show-contexts --title "Coverage for ${{ github.sha }}" --include=rich_objects/*
       - name: Store coverage HTML
         uses: actions/upload-artifact@v4
         with:
