--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "rich-objects"
-version = "0.2.0"
-description = ""
+version = "0.2.1"
+description = "Tools to rich print complex objects (e.g. JSON responses)"
 authors = [
     {name = "Rick Porter",email = "rickwporter@gmail.com"}
 ]
